--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-cdd = { path = "../cdd-core" }
+cdd = { git = "https://github.com/offscale/cdd-core" }
 failure = "0.1.6"
 ws = "0.9.1"
 websocket = "0.24.0"
