--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "cdd-harness"
 version = "0.1.0"
 authors = ["Rob Saunders <rob@wearebrandnew.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0 OR MIT"
+homepage = "https://compilers.com.au"
+readme = "README.md"
+repository = "https://github.com/offscale/cdd-harness"
+description = "Integration test harness framework for Compiler Driven Development (CDD)."
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
